# fpm-embedded

./: .gitignore  Makefile  README.md
apps/: CMakeLists.txt  Makefile  export.sym
apps/cmd/: CMakeLists.txt  cmd.c
apps/free/: CMakeLists.txt  free.c
apps/gpio/: CMakeLists.txt  gpio.c
apps/hello/: CMakeLists.txt
apps/printf/: CMakeLists.txt  printf.c
apps/rz/: CMakeLists.txt  README.md  crc.c  crc.h  crc16.c  crc16.h  crc32.c  crc32.h  rz.c  zheaders.c  zheaders.h  zmodem.h  znumbers.c  znumbers.h  zreceive.c  zserial.c  zserial.h  ztypes.h
build-unix/: Makefile
demo/fatfs_pico/: CMakeLists.txt  main.c  thing_plus.hw_config.c
demo/hello_pico/: CMakeLists.txt
demo/shell_pico/: CMakeLists.txt  main_pico.c
demo/shell_unix/: Makefile  README.md  main_unix.c  reactos-shell-help.txt
disk/: diskio.c  diskio.h  f_util.c  f_util.h  ff_stdio.c  rtc.c
docs/: Build-From-Sources.md  Contributing.md  Develop-Your-Own-Application.md  Documentation.md  Dynamic-Linking.md  Getting-Started.md  Supported-Platforms.md
fatfs/: CMakeLists.txt  diskio.c  fatfs.c  fatfs.h  ff.c  ffconf.h  ffsystem.c  ffunicode.c  strerror.c  unicode.c
fatfs/examples/: app1.c  app2.c  app3.c  app4.c  app5.c  app6.c  demo_delete_node.c  test_diskio.c  test_raw_speed.c
fatfs/glue/: f_util.c  f_util.h  ff_stdio.h  glue.c  my_debug.c  rtc.c
fatfs/sd_driver/: hw_config.h  sd_card.c  sd_card.h
fatfs/test/: CMakeLists.txt  main.c
include/fpm/: api.h  bindings.h  context.h  diskio.h  elf.h  fs.h  getopt.h  internal.h  loader.h
include/rpm/: api.h  diskio.h  elf.h  fs.h  getopt.h  internal.h  loader.h
kernel/: CMakeLists.txt  fpm_alloc.c  fpm_atof.c  fpm_bindings.c  fpm_editline.c  fpm_exec.c  fpm_get_dotw.c  fpm_getkey.c  fpm_getopt.c  fpm_getwch.c  fpm_loader.c  fpm_puts.c  fpm_putwch.c  fpm_shell.c  fpm_strlcpy.c  fpm_strtol.c  fpm_strwlen.c  fpm_tokenize.c  fpm_wputs.c  rpm_alloc.c  rpm_editline.c  rpm_exec.c  rpm_get_dotw.c  rpm_getkey.c  rpm_getopt.c  rpm_getwch.c  rpm_loader.c  rpm_pico.c  rpm_puts.c  rpm_putwch.c  rpm_shell.c  rpm_strlcpy.c  rpm_strwlen.c  rpm_tokenize.c  rpm_unix.c  rpm_wputs.c
kernel/cmd/: cmd_cat.c  cmd_cd.c  cmd_clear.c  cmd_copy.c  cmd_date.c  cmd_dir.c  cmd_echo.c  cmd_eject.c  cmd_format.c  cmd_help.c  cmd_mkdir.c  cmd_more.c  cmd_mount.c  cmd_pwd.c  cmd_reboot.c  cmd_remove.c  cmd_rename.c  cmd_rmdir.c  cmd_time.c  cmd_ver.c  cmd_vol.c
kernel/fatfs/sd_driver/: sd_card.c  sd_card.h  sd_spi.c  spi.c  spi.h
lib/: Makefile  rpm-stub.c  testputs.c
pico/: CMakeLists.txt  bindings.c  diskio.c  flash.c  flash.h  flash_image.cmake  fpm_pico.c  main_pico.c  rpm_pico.c  rtc_pico.c
pico/flashfs/: readme.txt
pico/sd_pico/: hw_config.c  sd_card.c  sd_card.h  sd_spi.c  spi.c  spi.h
rpm/: rpm_editline.c
rtc/: rtc_pico.c
sd_pico/: hw_config.h  sd_card.c  sd_card.h
shell/: Makefile  main_unix.c  shell.c
test/: Makefile  dotw_test.c  editline_test.c  fatfs_test.c  getopt_test.c  tokenize_test.c  unit_tests
tests/: CMakeLists.txt  Makefile  alloc_test.cpp  console_util.cpp  copy_test.c  copy_test.cpp  dotw_test.c  dotw_test.cpp  editline_test.c  editline_test.cpp  fatfs_test.c  fatfs_test.cpp  fs_util.c  fs_util.cpp  getopt_test.c  getopt_test.cpp  hello.c  loader2_test.cpp  loader_test.cpp  testputs.c  tokenize_test.c  tokenize_test.cpp  util.h  zmodem_test.cpp
tests/hello/: Makefile  hello.c  rpm-api.ifs
tools/elf2exe/: .gitignore  CMakeLists.txt  Makefile  README.md  elf2exe.c
tools/elfexe/: .gitignore  CMakeLists.txt  Makefile  README.md  elfexe.c
tools/uf2fat/: .gitignore  CMakeLists.txt  Makefile  README.md  UF2-File-Format.md  diskio.cpp  dump.cpp  extern.h  format.cpp  main.cpp  uf2.h
unix/: CMakeLists.txt  README.md  bindings.c  diskio_unix.c  fpm_unix.c  loader_unix.c  main_unix.c  rpm_unix.c
