add_library(fpm_kernel STATIC
    fpm_editline.c
    fpm_getkey.c
    fpm_getwch.c
    fpm_puts.c
    fpm_putwch.c
    fpm_shell.c
    fpm_exec.c
    fpm_strlcpy.c
    fpm_strwlen.c
    fpm_tokenize.c
    fpm_getopt.c
    fpm_wputs.c
    fpm_get_dotw.c
    fpm_alloc.c
    fpm_loader.c
    fpm_strtol.c
    fpm_atof.c

    cmd/cmd_cat.c
    cmd/cmd_cd.c
    cmd/cmd_clear.c
    cmd/cmd_copy.c
    cmd/cmd_date.c
    cmd/cmd_dir.c
    cmd/cmd_echo.c
    cmd/cmd_eject.c
    cmd/cmd_format.c
    cmd/cmd_help.c
    cmd/cmd_mkdir.c
    cmd/cmd_mount.c
    cmd/cmd_reboot.c
    cmd/cmd_remove.c
    cmd/cmd_rename.c
    cmd/cmd_rmdir.c
    cmd/cmd_time.c
    cmd/cmd_ver.c
    cmd/cmd_vol.c
)
target_include_directories(fpm_kernel BEFORE PUBLIC
    ../include
)
